--- a/snake.html
+++ b/snake.html
@@ -9,7 +9,34 @@
 </head>
 
 <body>
-    Welcome to Snake!
+    <canvas id="gameCanvas" width="300" height="300">
+        <canvas>
+
+
+            <script>
+                //Contants//
+                const CANVAS_BORDER_COLOR = 'black';
+                const CANVAS_BACKGROUND_COLOUR = 'white';;
+
+                //get the canvas element
+                var gameCanvas = document.getElementById('gameCanvas');
+
+                //return the two dimensional drawing constext
+                var ctx = gameCanvas.getContext('2d');
+
+                //select the color to fill the canvas
+                ctx.fillStyle = CANVAS_BACKGROUND_COLOUR;
+
+                //select the colour for the border of the canvas
+                ctx.strokestyle = CANVAS_BORDER_COLOUR;
+
+                // Draw a "filled" rectangle to cover the entire canvas
+                ctx.fillRect(0, 0, gameCanvas.width, gameCanvas.height);
+
+                // Draw a border around the entire canvas
+                ctx.strokeRect(0, 0, gameCanvas.width, gameCanvas.height);
+
+            </script>
 
 </body>
 
