created a horizonal snake in the middle of canvas

--- a/snake.html
+++ b/snake.html
@@ -16,12 +16,12 @@
             <script>
                 //Contants//
                 const CANVAS_BORDER_COLOR = 'black';
-                const CANVAS_BACKGROUND_COLOUR = 'white';;
+                const CANVAS_BACKGROUND_COLOUR = 'white';
 
-                //get the canvas element
+                // First we get the canvas element using the id gameCanvas we specified earlier. 
                 var gameCanvas = document.getElementById('gameCanvas');
 
-                //return the two dimensional drawing constext
+                //We then get the canvas “2d” context, which means we will be drawing into 2D space.
                 var ctx = gameCanvas.getContext('2d');
 
                 //select the color to fill the canvas
@@ -35,6 +35,19 @@
 
                 // Draw a border around the entire canvas
                 ctx.strokeRect(0, 0, gameCanvas.width, gameCanvas.height);
+
+
+                //for snake to work, we need to know the location of it
+                //to do this, we can represent the snake as an array of coordinates
+                //to create a snake in the middle of the canvas 150,150 
+
+                let snake = [
+                    { x: 150, y: 150 },
+                    { x: 140, y: 150 },
+                    { x: 130, y: 150 },
+                    { x: 120, y: 150 },
+                    { x: 110, y: 150 },
+                ];
 
             </script>
 
