drawing snakein JS

--- a/snake.html
+++ b/snake.html
@@ -17,6 +17,20 @@
                 //Contants//
                 const CANVAS_BORDER_COLOR = 'black';
                 const CANVAS_BACKGROUND_COLOUR = 'white';
+                const SNAKE_COLOUR = 'lightgreen';
+                const SNAKE_BORDER_COLOUR = 'darkgreen';
+
+                //for snake to work, we need to know the location of it
+                //to do this, we can represent the snake as an array of coordinates
+                //to create a snake in the middle of the canvas 150,150 
+
+                let snake = [
+                    { x: 150, y: 150 },
+                    { x: 140, y: 150 },
+                    { x: 130, y: 150 },
+                    { x: 120, y: 150 },
+                    { x: 110, y: 150 },
+                ];
 
                 // First we get the canvas element using the id gameCanvas we specified earlier. 
                 var gameCanvas = document.getElementById('gameCanvas');
@@ -37,17 +51,27 @@
                 ctx.strokeRect(0, 0, gameCanvas.width, gameCanvas.height);
 
 
-                //for snake to work, we need to know the location of it
-                //to do this, we can represent the snake as an array of coordinates
-                //to create a snake in the middle of the canvas 150,150 
 
-                let snake = [
-                    { x: 150, y: 150 },
-                    { x: 140, y: 150 },
-                    { x: 130, y: 150 },
-                    { x: 120, y: 150 },
-                    { x: 110, y: 150 },
-                ];
+
+                //CREATING AND DRAWING THE SNAKE  
+                // to display the snake on the canvas, we can write a function to draw a rectangle for each pair of coordinates
+
+                function drawSnakePart(snakePart) {
+                    ctx.fillStyle = 'lightgreen';
+                    ctx.strokestyle = 'darkgreen';
+
+                    ctx.fillRect(snakePart.x, snakePart.y, 10, 10);
+                    ctx.strokeRect(snakePart.x, snakePart.y, 10, 10);
+                }
+
+                //now we create another functions that prints the parts on the canvas. 
+
+                function drawSnake() {
+                    snake.forEach(drawSnakePart);
+                }
+
+
+
 
             </script>
 
