--- a/snake.html
+++ b/snake.html
@@ -42,7 +42,7 @@
                 ctx.fillStyle = CANVAS_BACKGROUND_COLOUR;
 
                 //select the colour for the border of the canvas
-                ctx.strokestyle = CANVAS_BORDER_COLOUR;
+                ctx.strokeStyle = CANVAS_BORDER_COLOUR;
 
                 // Draw a "filled" rectangle to cover the entire canvas
                 ctx.fillRect(0, 0, gameCanvas.width, gameCanvas.height);
@@ -50,29 +50,35 @@
                 // Draw a border around the entire canvas
                 ctx.strokeRect(0, 0, gameCanvas.width, gameCanvas.height);
 
-
-
+                drawSnake();
 
                 //CREATING AND DRAWING THE SNAKE  
                 // to display the snake on the canvas, we can write a function to draw a rectangle for each pair of coordinates
 
-                function drawSnakePart(snakePart) {
-                    ctx.fillStyle = 'lightgreen';
-                    ctx.strokestyle = 'darkgreen';
+                function drawSnake() {
+                    //loop through the snake parts drawing each part on canvas
+                    snake.forEach(drawSnakePart)
+                }
 
+                //Draws a part of the snake on canvas
+                //@param object snakePart - coordinates where tha part should be drawn
+                function drawSnakePart(snakePart) {
+
+                    //set the color of the snake 
+                    ctx.fillStyle = SNAKE_COLOUR;
+
+                    //set the border colour of the snake 
+                    ctx.strokestyle = SNAKE_BORDER_COLOUR;
+
+                    //Draw  filled rectangle to represent the snake a the coordinates
+                    // the part is located
                     ctx.fillRect(snakePart.x, snakePart.y, 10, 10);
+
+                    //Draw a border around the snake
                     ctx.strokeRect(snakePart.x, snakePart.y, 10, 10);
                 }
 
                 //now we create another functions that prints the parts on the canvas. 
-
-                function drawSnake() {
-                    snake.forEach(drawSnakePart);
-                }
-
-
-
-
             </script>
 
 </body>
