--- a/snake.html
+++ b/snake.html
@@ -14,11 +14,13 @@
 
 
             <script>
+
                 //Contants//
-                const CANVAS_BORDER_COLOR = 'black';
+                const CANVAS_BORDER_COLOUR = 'black';
                 const CANVAS_BACKGROUND_COLOUR = 'white';
-                const SNAKE_COLOUR = 'lightgreen';
                 const SNAKE_BORDER_COLOUR = 'darkgreen';
+                const SNAKE_COLOUR = 'lightgreen';
+
 
                 //for snake to work, we need to know the location of it
                 //to do this, we can represent the snake as an array of coordinates
@@ -42,7 +44,7 @@
                 ctx.fillStyle = CANVAS_BACKGROUND_COLOUR;
 
                 //select the colour for the border of the canvas
-                ctx.strokeStyle = CANVAS_BORDER_COLOUR;
+                ctx.strokestyle = CANVAS_BORDER_COLOUR;
 
                 // Draw a "filled" rectangle to cover the entire canvas
                 ctx.fillRect(0, 0, gameCanvas.width, gameCanvas.height);
@@ -68,7 +70,7 @@
                     ctx.fillStyle = SNAKE_COLOUR;
 
                     //set the border colour of the snake 
-                    ctx.strokestyle = SNAKE_BORDER_COLOUR;
+                    ctx.strokeStyle = SNAKE_BORDER_COLOUR;
 
                     //Draw  filled rectangle to represent the snake a the coordinates
                     // the part is located
@@ -80,6 +82,7 @@
 
                 //now we create another functions that prints the parts on the canvas. 
             </script>
+
 
 </body>
 
