--- a/snake.html
+++ b/snake.html
@@ -6,15 +6,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Snake Game</title>
+
 </head>
 
 <body>
     <canvas id="gameCanvas" width="300" height="300">
         <canvas>
 
-            <script type="text/javascript" src="/SnakeGame/js/canvas.js"></script>
-            <script type="text/javascript" src="/js/snake.js"></script>
-            <script type="text/javascript" src="/js/snakeMove.js"></script>
+            <script type="text/javascript" src="js/canvas.js"></script>
+            <script type="text/javascript" src="js/snake.js"></script>
+            <script type="text/javascript" src="js/snakeMove.js"></script>
 
 </body>
 
