--- a/snake.html
+++ b/snake.html
@@ -79,6 +79,26 @@
                     ctx.strokeRect(snakePart.x, snakePart.y, 10, 10);
                 }
 
+                //NOW LETS ENABLE THE SNAKE TO MOVE HORIZONTALLY
+
+                let snake = [
+                    { x: 150, y: 150 },
+                    { x: 140, y: 150 },
+                    { x: 130, y: 150 },
+                    { x: 120, y: 150 },
+                    { x: 110, y: 150 },
+                ]
+
+                let nextSnake = [
+                    { x: 150, y: 150 },
+                    { x: 140, y: 150 },
+                    { x: 130, y: 150 },
+                    { x: 120, y: 150 },
+                    { x: 110, y: 150 },
+                ]
+
+
+
             </script>
 
 </body>
