building out key press functionality to allow user to change direction of snake

--- a/snake.html
+++ b/snake.html
@@ -63,6 +63,11 @@
                     ctx.strokeRect(0, 0, gameCanvas.width, gameCanvas.height);
                 }
 
+
+                //start game 
+                main();
+                //create the first food location 
+
                 //to test how out advanceSnake func works, we can temporarily call it before the drawSnake func
                 //move on step to the right 
                 advanceSnake()
