--- a/snake.html
+++ b/snake.html
@@ -50,8 +50,41 @@
                 var gameCanvas = document.getElementById('gameCanvas');
                 //then return the canvas “2d” context, which means we will be drawing into 2D space.
                 var ctx = gameCanvas.getContext('2d');
+                //select the color to fill the canvas
+                ctx.fillStyle = CANVAS_BACKGROUND_COLOUR;
+                //select the colour for the border of the canvas
+                ctx.strokestyle = CANVAS_BORDER_COLOUR;
+                // Draw a "filled" rectangle to cover the entire canvas
+                ctx.fillRect(0, 0, gameCanvas.width, gameCanvas.height);
+                // Draw a border around the entire canvas
+                ctx.strokeRect(0, 0, gameCanvas.width, gameCanvas.height);
 
-                //BEFORE we move on, lets refactor the code to draw the canvas inside a function
+
+                //start game 
+                main();
+                //create the first food location 
+                createFood();
+                //call changeDirection whenever the key is pressed 
+                document.addEventListener("keydown", changeDirection);
+
+                function main() {
+
+                    if (didGameEnd()) return;
+
+                    setTimeout(function onTick() {
+                        clearCanvas();
+                        drawFood();
+                        advanceSnake();
+                        drawSnake();
+
+                        //call man again 
+                        main();
+                    },
+                }
+
+                //Change the background coloe of the canvas to CANVAS_BACGROUND and 
+                //draw a border around it
+
                 function clearCanvas() {
                     //select the color to fill the canvas
                     ctx.fillStyle = CANVAS_BACKGROUND_COLOUR;
@@ -64,9 +97,7 @@
                 }
 
 
-                //start game 
-                main();
-                //create the first food location 
+
 
                 //to test how out advanceSnake func works, we can temporarily call it before the drawSnake func
                 //move on step to the right 
