--- a/snake.html
+++ b/snake.html
@@ -60,7 +60,7 @@
                 ctx.strokeRect(0, 0, gameCanvas.width, gameCanvas.height);
 
 
-                //start game 
+                //START GAME
                 main();
                 //create the first food location 
                 createFood();
@@ -79,7 +79,7 @@
 
                         //call man again 
                         main();
-                    },
+                    }, 100)
                 }
 
                 //Change the background coloe of the canvas to CANVAS_BACGROUND and 
@@ -90,6 +90,7 @@
                     ctx.fillStyle = CANVAS_BACKGROUND_COLOUR;
                     //select the colour for the border of the canvas
                     ctx.strokestyle = CANVAS_BORDER_COLOUR;
+
                     // Draw a "filled" rectangle to cover the entire canvas
                     ctx.fillRect(0, 0, gameCanvas.width, gameCanvas.height);
                     // Draw a border around the entire canvas
