--- a/snake.html
+++ b/snake.html
@@ -97,7 +97,11 @@
                     ctx.strokeRect(0, 0, gameCanvas.width, gameCanvas.height);
                 }
 
-
+                //returns trun of the head of the snake touched another part of the game or any of the walls
+                function didGameEnd() {
+                    for (let i = 4; i < snake[i].x === snake[0].x && snake[i].y === snake[0].y)
+                        if (didCollide) return true
+                }
 
 
                 //to test how out advanceSnake func works, we can temporarily call it before the drawSnake func
