--- a/snake.html
+++ b/snake.html
@@ -99,8 +99,17 @@
 
                 //returns trun of the head of the snake touched another part of the game or any of the walls
                 function didGameEnd() {
-                    for (let i = 4; i < snake[i].x === snake[0].x && snake[i].y === snake[0].y)
+                    for (let i = 4; i < snake.length; i++ {
+                        const didCollide = snake[i].x === snake[0].x && snake[i].y === snake[0].y
                         if (didCollide) return true
+                    }
+
+                    const hitLeftWall = snake[0].x < 0;
+                    const hitRightWall = snake[0].x > gameCanvas.width - 10;
+                    const hitTopWall = snake[0].y < 0;
+                    const hitBottomWall = snake[0].y > gameCanvas.height - 10;
+
+                    return hitLeftWall || hitRightWall || hitTopWall || hitBottomWall
                 }
 
 
