added drawFood func

--- a/snake.html
+++ b/snake.html
@@ -112,6 +112,13 @@
                     return hitLeftWall || hitRightWall || hitTopWall || hitBottomWall
                 }
 
+                //DRAW FOOD ON CANVAS
+                function drawFood() {
+                    ctx.fillStyle = FOOD_COLOUR;
+                    ctx.strokestyle = FOOD_BORDER_COLOUR;
+                    ctx.fillRect(foodX, foodY, 10, 10);
+                    ctx.strokeRect(foodX, foodY, 10, 10)
+                }
 
                 //to test how out advanceSnake func works, we can temporarily call it before the drawSnake func
                 //move on step to the right 
