fixing directional bug

--- a/snake.html
+++ b/snake.html
@@ -202,6 +202,10 @@
                     const UP_KEY = 38;
                     const DOWN_KEY = 40;
 
+                    if (changeDirection) return;
+
+                    changeDirection = true;
+
                     const keyPressed = event.keyCode;
 
                     const goingUp = dy === -10;
