--- a/snake.html
+++ b/snake.html
@@ -16,227 +16,241 @@
     <canvas id="gameCanvas" width="300" height="300">
         <canvas>
 
-            <script>
-                //Constants//
-                const CANVAS_BORDER_COLOUR = 'black';
-                const CANVAS_BACKGROUND_COLOUR = 'white';
-                const SNAKE_COLOUR = 'lightgreen';
-                const SNAKE_BORDER_COLOUR = 'darkgreen';
-                const FOOD_COLOUR = 'red';
-                const FOOD_BORDER_COLOUR = 'darkred';
-
-
-                //for snake to work, we need to know the location of it
-                //to do this, we can represent the snake as an array of coordinates
-                //to create a snake in the middle of the canvas 150,150 
-
-                let snake = [
-                    { x: 150, y: 150 },
-                    { x: 140, y: 150 },
-                    { x: 130, y: 150 },
-                    { x: 120, y: 150 },
-                    { x: 110, y: 150 },
-                ]
-
-                //the users score
-                let score = 0;
-
-                // Horizonal velocity
-                let dx = 10;
-                //vertivcal valocity
-                let dy = 0;
-
-
-
-                //Get the canvas element using the id gameCanvas we specified earlier. 
-                var gameCanvas = document.getElementById('gameCanvas');
-                //then return the canvas “2d” context, which means we will be drawing into 2D space.
-                var ctx = gameCanvas.getContext('2d');
-                //select the color to fill the canvas
-                ctx.fillStyle = CANVAS_BACKGROUND_COLOUR;
-                //select the colour for the border of the canvas
-                ctx.strokestyle = CANVAS_BORDER_COLOUR;
-                // Draw a "filled" rectangle to cover the entire canvas
-                ctx.fillRect(0, 0, gameCanvas.width, gameCanvas.height);
-                // Draw a border around the entire canvas
-                ctx.strokeRect(0, 0, gameCanvas.width, gameCanvas.height);
-
-
-                //START GAME
-                main();
-                //create the first food location 
-                createFood();
-                //call changeDirection whenever the key is pressed 
-                document.addEventListener("keydown", changeDirection);
-
-                function main() {
-
-                    if (didGameEnd()) return;
-
-                    setTimeout(function onTick() {
-                        clearCanvas();
-                        drawFood();
-                        advanceSnake();
-                        drawSnake();
-
-                        //call man again 
-                        main();
-                    }, 100)
+            <style>
+                #gameCanvas {
+                    position: absolute;
+                    top: 50%;
+                    left: 50%;
+                    transform: translate(-50%, -50%);
                 }
 
-                //Change the background coloe of the canvas to CANVAS_BACGROUND and 
-                //draw a border around it
-
-                function clearCanvas() {
-                    //select the color to fill the canvas
-                    ctx.fillStyle = CANVAS_BACKGROUND_COLOUR;
-                    //select the colour for the border of the canvas
-                    ctx.strokestyle = CANVAS_BORDER_COLOUR;
-
-                    // Draw a "filled" rectangle to cover the entire canvas
-                    ctx.fillRect(0, 0, gameCanvas.width, gameCanvas.height);
-                    // Draw a border around the entire canvas
-                    ctx.strokeRect(0, 0, gameCanvas.width, gameCanvas.height);
+                #score {
+                    text-align: center;
+                    font-size: 140px;
+                    font-family: 'Arabic Slab', serif;
                 }
-
-                //returns trun of the head of the snake touched another part of the game or any of the walls
-                function didGameEnd() {
-                    for (let i = 4; i < snake.length; i++) {
-                        const didCollide = snake[i].x === snake[0].x && snake[i].y === snake[0].y
-                        if (didCollide) return true
-                    }
-
-                    const hitLeftWall = snake[0].x < 0;
-                    const hitRightWall = snake[0].x > gameCanvas.width - 10;
-                    const hitTopWall = snake[0].y < 0;
-                    const hitBottomWall = snake[0].y > gameCanvas.height - 10;
-
-                    return hitLeftWall || hitRightWall || hitTopWall || hitBottomWall
-                }
-
-                //DRAW FOOD ON CANVAS
-                function drawFood() {
-                    ctx.fillStyle = FOOD_COLOUR;
-                    ctx.strokestyle = FOOD_BORDER_COLOUR;
-                    ctx.fillRect(foodX, foodY, 10, 10);
-                    ctx.strokeRect(foodX, foodY, 10, 10);
-                }
-
-                // * ADVANCES the snake by changing the x-coordinates of its parts
-                // * according to the horizontal velocity and the y - coordinates of its parts
-                //  * according to the vertical veolocity
-                function advanceSnake() {
-                    //creates the new snakes head
-                    const head = { x: snake[0].x + dx, y: snake[0].y + dy };
-                    // add the new head to the beginning of snake body
-                    snake.unshift(head);
-
-
-                    const didEatFood = snake[0].x === foodX && snake[0].y === foodY;
-                    if (didEatFood) {
-                        //increase score
-                        score += 10;
-                        //display score on screen
-                        document.getElementById('score').innerHTML = score;
-
-                        //Generate new food location
-                        createFood();
-                    } else {
-                        //remove the last part of the body
-                        snake.pop();
-                    }
-                }
-
-                //Generates a random number that is a multiple of 10 given a minimum and a maximum number
-                // @param   number  min - minimum number the radnom number can be   
-                // @param   number  min - minimum number the radnom number can be 
-
-                function randomTen(min, max) {
-                    return Math.round((Math.random() * (max - min) + min) / 10) * 10;
-                }
-
-                //Creates ransom set of coordinates for the snake food. 
-
-                function createFood() {
-                    //generate a random number the food x-coordinate
-                    foodX = randomTen(0, gameCanvas.width - 10);
-                    //generate a random number the food y-coordinate
-                    foodY = randomTen(0, gameCanvas.width - 10);
-
-                    //if the new food location is where the snake property currently is, generate a new location
-                    snake.forEach(function isOnSnake(part) {
-                        if (part.x == foodX && part.y == foodY) createFood();
-                    });
-                }
-
-                //CREATING AND DRAWING THE SNAKE  
-                // to display the snake on the canvas, we can write a function to draw a rectangle for each pair of coordinates
-                function drawSnake() {
-                    //loop through the snake parts drawing each part on canvas
-                    snake.forEach(drawSnakePart)
-                }
-
-                //Draws a part of the snake on canvas
-                //@param object snakePart - coordinates where tha part should be drawn
-                function drawSnakePart(snakePart) {
-                    //set the color of the snake 
-                    ctx.fillStyle = SNAKE_COLOUR;
-
-                    //set the border colour of the snake 
-                    ctx.strokeStyle = SNAKE_BORDER_COLOUR;
-
-                    //Draw  filled rectangle to represent the snake a the coordinates
-                    // the part is located
-                    ctx.fillRect(snakePart.x, snakePart.y, 10, 10);
-
-                    //Draw a border around the snake
-                    ctx.strokeRect(snakePart.x, snakePart.y, 10, 10);
-                }
-
-                //changes the vertical and horizonal velocity of the snake accoring to the key that was pressed
-                //direction cannot be swithed to the oppisite direction, to prevent the snake from reversing
-                //for example, if the direction is "right" it cannot become "left"
-                // @param  object  event - the keydown event
-
-                function changeDirection(event) {
-                    const LEFT_KEY = 37;
-                    const RIGHT_KEY = 39;
-                    const UP_KEY = 38;
-                    const DOWN_KEY = 40;
-
-                    if (changeDirection) return;
-
-                    changeDirection = true;
-
-                    const keyPressed = event.keyCode;
-
-                    const goingUp = dy === -10;
-                    const goingDown = dy === 10;
-                    const goingRight = dx === 10;
-                    const goingLeft = dx === -10;
-
-                    if (keyPressed === LEFT_KEY && !goingRight) {
-                        dx = -10;
-                        dy = 0;
-                    }
-
-                    if (keyPressed === UP_KEY && !goingDown) {
-                        dx = 0;
-                        dy = -10;
-                    }
-
-                    if (keyPressed === RIGHT_KEY && !goingLeft) {
-                        dx = 10;
-                        dy = 0;
-                    }
-
-                    if (keyPressed === DOWN_KEY && !goingUp) {
-                        dx = 0;
-                        dy = 10;
-                    }
-                }
-            </script>
-
+            </style>
 </body>
+
+<script>
+    //Constants//
+    const CANVAS_BORDER_COLOUR = 'black';
+    const CANVAS_BACKGROUND_COLOUR = 'white';
+    const SNAKE_COLOUR = 'lightgreen';
+    const SNAKE_BORDER_COLOUR = 'darkgreen';
+    const FOOD_COLOUR = 'red';
+    const FOOD_BORDER_COLOUR = 'darkred';
+
+
+    //for snake to work, we need to know the location of it
+    //to do this, we can represent the snake as an array of coordinates
+    //to create a snake in the middle of the canvas 150,150 
+
+    let snake = [
+        { x: 150, y: 150 },
+        { x: 140, y: 150 },
+        { x: 130, y: 150 },
+        { x: 120, y: 150 },
+        { x: 110, y: 150 },
+    ]
+
+    //the users score
+    let score = 0;
+
+    // Horizonal velocity
+    let dx = 10;
+    //vertivcal valocity
+    let dy = 0;
+
+
+
+    //Get the canvas element using the id gameCanvas we specified earlier. 
+    var gameCanvas = document.getElementById('gameCanvas');
+    //then return the canvas “2d” context, which means we will be drawing into 2D space.
+    var ctx = gameCanvas.getContext('2d');
+    //select the color to fill the canvas
+    ctx.fillStyle = CANVAS_BACKGROUND_COLOUR;
+    //select the colour for the border of the canvas
+    ctx.strokestyle = CANVAS_BORDER_COLOUR;
+    // Draw a "filled" rectangle to cover the entire canvas
+    ctx.fillRect(0, 0, gameCanvas.width, gameCanvas.height);
+    // Draw a border around the entire canvas
+    ctx.strokeRect(0, 0, gameCanvas.width, gameCanvas.height);
+
+
+    //START GAME
+    main();
+    //create the first food location 
+    createFood();
+    //call changeDirection whenever the key is pressed 
+    document.addEventListener("keydown", changeDirection);
+
+    function main() {
+
+        if (didGameEnd()) return;
+
+        setTimeout(function onTick() {
+            clearCanvas();
+            drawFood();
+            advanceSnake();
+            drawSnake();
+
+            //call man again 
+            main();
+        }, 100)
+    }
+
+    //Change the background coloe of the canvas to CANVAS_BACGROUND and 
+    //draw a border around it
+
+    function clearCanvas() {
+        //select the color to fill the canvas
+        ctx.fillStyle = CANVAS_BACKGROUND_COLOUR;
+        //select the colour for the border of the canvas
+        ctx.strokestyle = CANVAS_BORDER_COLOUR;
+
+        // Draw a "filled" rectangle to cover the entire canvas
+        ctx.fillRect(0, 0, gameCanvas.width, gameCanvas.height);
+        // Draw a border around the entire canvas
+        ctx.strokeRect(0, 0, gameCanvas.width, gameCanvas.height);
+    }
+
+    //returns trun of the head of the snake touched another part of the game or any of the walls
+    function didGameEnd() {
+        for (let i = 4; i < snake.length; i++) {
+            const didCollide = snake[i].x === snake[0].x && snake[i].y === snake[0].y
+            if (didCollide) return true
+        }
+
+        const hitLeftWall = snake[0].x < 0;
+        const hitRightWall = snake[0].x > gameCanvas.width - 10;
+        const hitTopWall = snake[0].y < 0;
+        const hitBottomWall = snake[0].y > gameCanvas.height - 10;
+
+        return hitLeftWall || hitRightWall || hitTopWall || hitBottomWall
+    }
+
+    //DRAW FOOD ON CANVAS
+    function drawFood() {
+        ctx.fillStyle = FOOD_COLOUR;
+        ctx.strokestyle = FOOD_BORDER_COLOUR;
+        ctx.fillRect(foodX, foodY, 10, 10);
+        ctx.strokeRect(foodX, foodY, 10, 10);
+    }
+
+    // * ADVANCES the snake by changing the x-coordinates of its parts
+    // * according to the horizontal velocity and the y - coordinates of its parts
+    //  * according to the vertical veolocity
+    function advanceSnake() {
+        //creates the new snakes head
+        const head = { x: snake[0].x + dx, y: snake[0].y + dy };
+        // add the new head to the beginning of snake body
+        snake.unshift(head);
+
+
+        const didEatFood = snake[0].x === foodX && snake[0].y === foodY;
+        if (didEatFood) {
+            //increase score
+            score += 10;
+            //display score on screen
+            document.getElementById('score').innerHTML = score;
+
+            //Generate new food location
+            createFood();
+        } else {
+            //remove the last part of the body
+            snake.pop();
+        }
+    }
+
+    //Generates a random number that is a multiple of 10 given a minimum and a maximum number
+    // @param   number  min - minimum number the radnom number can be   
+    // @param   number  min - minimum number the radnom number can be 
+
+    function randomTen(min, max) {
+        return Math.round((Math.random() * (max - min) + min) / 10) * 10;
+    }
+
+    //Creates ransom set of coordinates for the snake food. 
+
+    function createFood() {
+        //generate a random number the food x-coordinate
+        foodX = randomTen(0, gameCanvas.width - 10);
+        //generate a random number the food y-coordinate
+        foodY = randomTen(0, gameCanvas.width - 10);
+
+        //if the new food location is where the snake property currently is, generate a new location
+        snake.forEach(function isOnSnake(part) {
+            if (part.x == foodX && part.y == foodY) createFood();
+        });
+    }
+
+    //CREATING AND DRAWING THE SNAKE  
+    // to display the snake on the canvas, we can write a function to draw a rectangle for each pair of coordinates
+    function drawSnake() {
+        //loop through the snake parts drawing each part on canvas
+        snake.forEach(drawSnakePart)
+    }
+
+    //Draws a part of the snake on canvas
+    //@param object snakePart - coordinates where tha part should be drawn
+    function drawSnakePart(snakePart) {
+        //set the color of the snake 
+        ctx.fillStyle = SNAKE_COLOUR;
+
+        //set the border colour of the snake 
+        ctx.strokeStyle = SNAKE_BORDER_COLOUR;
+
+        //Draw  filled rectangle to represent the snake a the coordinates
+        // the part is located
+        ctx.fillRect(snakePart.x, snakePart.y, 10, 10);
+
+        //Draw a border around the snake
+        ctx.strokeRect(snakePart.x, snakePart.y, 10, 10);
+    }
+
+    //changes the vertical and horizonal velocity of the snake accoring to the key that was pressed
+    //direction cannot be swithed to the oppisite direction, to prevent the snake from reversing
+    //for example, if the direction is "right" it cannot become "left"
+    // @param  object  event - the keydown event
+
+    function changeDirection(event) {
+        const LEFT_KEY = 37;
+        const RIGHT_KEY = 39;
+        const UP_KEY = 38;
+        const DOWN_KEY = 40;
+
+        if (changeDirection) return;
+
+        changeDirection = true;
+
+        const keyPressed = event.keyCode;
+
+        const goingUp = dy === -10;
+        const goingDown = dy === 10;
+        const goingRight = dx === 10;
+        const goingLeft = dx === -10;
+
+        if (keyPressed === LEFT_KEY && !goingRight) {
+            dx = -10;
+            dy = 0;
+        }
+
+        if (keyPressed === UP_KEY && !goingDown) {
+            dx = 0;
+            dy = -10;
+        }
+
+        if (keyPressed === RIGHT_KEY && !goingLeft) {
+            dx = 10;
+            dy = 0;
+        }
+
+        if (keyPressed === DOWN_KEY && !goingUp) {
+            dx = 0;
+            dy = 10;
+        }
+    }
+</script>
 
 </html>
