refactored vars and added changeDirection patch

--- a/snake.html
+++ b/snake.html
@@ -32,9 +32,10 @@
             </style>
 </body>
 
+
 <script>
     //Constants//
-
+    const GAME_SPEED = 100;
     const CANVAS_BORDER_COLOUR = 'black';
     const CANVAS_BACKGROUND_COLOUR = 'white';
     const SNAKE_COLOUR = 'lightgreen';
@@ -46,7 +47,6 @@
     //for snake to work, we need to know the location of it
     //to do this, we can represent the snake as an array of coordinates
     //to create a snake in the middle of the canvas 150,150 
-
     let snake = [
         { x: 150, y: 150 },
         { x: 140, y: 150 },
@@ -58,17 +58,26 @@
     //the users score
     let score = 0;
 
+    //when set to true the snake is chaning direction
+    let changingDirection = false;
+
+    //food x coordinate
+    let foodX;
+
+    //food y coordinate
+    let foodY;
+
     // Horizonal velocity
     let dx = 10;
+
     //vertivcal valocity
     let dy = 0;
 
 
-
     //Get the canvas element using the id gameCanvas we specified earlier. 
-    var gameCanvas = document.getElementById('gameCanvas');
+    const gameCanvas = document.getElementById('gameCanvas');
     //then return the canvas “2d” context, which means we will be drawing into 2D space.
-    var ctx = gameCanvas.getContext('2d');
+    const ctx = gameCanvas.getContext('2d');
     //select the color to fill the canvas
     ctx.fillStyle = CANVAS_BACKGROUND_COLOUR;
     //select the colour for the border of the canvas
