--- a/snake.html
+++ b/snake.html
@@ -79,13 +79,6 @@
     //then return the canvas “2d” context, which means we will be drawing into 2D space.
     const ctx = gameCanvas.getContext('2d');
     //select the color to fill the canvas
-    ctx.fillStyle = CANVAS_BACKGROUND_COLOUR;
-    //select the colour for the border of the canvas
-    ctx.strokestyle = CANVAS_BORDER_COLOUR;
-    // Draw a "filled" rectangle to cover the entire canvas
-    ctx.fillRect(0, 0, gameCanvas.width, gameCanvas.height);
-    // Draw a border around the entire canvas
-    ctx.strokeRect(0, 0, gameCanvas.width, gameCanvas.height);
 
 
     //START GAME
@@ -96,18 +89,19 @@
     document.addEventListener("keydown", changeDirection);
 
     function main() {
-
+        //if the game ended return early to stop game 
         if (didGameEnd()) return;
 
         setTimeout(function onTick() {
+            changingDirection = false;
             clearCanvas();
             drawFood();
             advanceSnake();
             drawSnake();
 
-            //call man again 
+            //call gmae again 
             main();
-        }, 100)
+        }, GAME_SPEED)
     }
 
     //Change the background coloe of the canvas to CANVAS_BACGROUND and 
