--- a/snake.html
+++ b/snake.html
@@ -24,7 +24,7 @@
         #score {
             text-align: center;
             font-size: 140px;
-            font-family: 'Arabic Slab', serif;
+            font-family: 'Antic Slab', serif;
         }
     </style>
 </body>
@@ -90,14 +90,12 @@
     function main() {
         //if the game ended return early to stop game 
         if (didGameEnd()) return;
-
         setTimeout(function onTick() {
             changingDirection = false;
             clearCanvas();
             drawFood();
             advanceSnake();
             drawSnake();
-
             //call game again 
             main();
         }, GAME_SPEED)
@@ -111,13 +109,11 @@
         ctx.fillStyle = CANVAS_BACKGROUND_COLOUR;
         //select the colour for the border of the canvas
         ctx.strokestyle = CANVAS_BORDER_COLOUR;
-
         // Draw a "filled" rectangle to cover the entire canvas
         ctx.fillRect(0, 0, gameCanvas.width, gameCanvas.height);
         // Draw a border around the entire canvas
         ctx.strokeRect(0, 0, gameCanvas.width, gameCanvas.height);
     }
-
     //DRAW FOOD ON CANVAS
     function drawFood() {
         ctx.fillStyle = FOOD_COLOUR;
@@ -125,7 +121,6 @@
         ctx.fillRect(foodX, foodY, 10, 10);
         ctx.strokeRect(foodX, foodY, 10, 10);
     }
-
     // * ADVANCES the snake by changing the x-coordinates of its parts
     // * according to the horizontal velocity and the y - coordinates of its parts
     //  * according to the vertical veolocity
@@ -134,15 +129,12 @@
         const head = { x: snake[0].x + dx, y: snake[0].y + dy };
         // add the new head to the beginning of snake body
         snake.unshift(head);
-
-
         const didEatFood = snake[0].x === foodX && snake[0].y === foodY;
         if (didEatFood) {
             //increase score
             score += 10;
             //display score on screen
             document.getElementById('score').innerHTML = score;
-
             //Generate new food location
             createFood();
         } else {
@@ -154,8 +146,7 @@
     //returns true of the head of the snake touched another part of the game or any of the walls
     function didGameEnd() {
         for (let i = 4; i < snake.length; i++) {
-            const didCollide = snake[i].x === snake[0].x && snake[i].y === snake[0].y
-            if (didCollide) return true
+            if (snake[i].x === snake[0].x && snake[i].y === snake[0].y) return true
         }
 
         const hitLeftWall = snake[0].x < 0;
